--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
 title:          Tale
-description:    "Minimal Jekyll theme for storytellers"
+description:    
 baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+url:            "https://hyeonjun0909.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Chester How
-  url:          https://chester.how
-  email:        chesterhow@gmail.com
+  name:         Jung Hyeonjun
+  url:          
+  email:        hyeonjun0909@gmail.com
 
 # Build settings
 markdown:       kramdown
